--- a/Project.ipynb
+++ b/Project.ipynb
@@ -25,6 +25,10 @@
     "import json\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "import re\n",
@@ -39,7 +43,38 @@
     "    return pd.DataFrame(data)\n",
     "\n",
     "file_path = 'test.jsonl'\n",
-    "df = read_jsonl(file_path)\n"
+    "df = read_jsonl(file_path)\n",
+    "\n",
+    "# Text preprocessing\n",
+    "nltk.download('stopwords')\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def preprocess_text(text):  # Convert to lowercase, Remove digits and special characters\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r'\\d+', '', text)\n",
+    "    text = re.sub(r'\\W+', ' ', text)\n",
+    "    words = text.split()\n",
+    "    words = [word for word in words if word not in stop_words]  # Remove stopwords\n",
+    "    return ' '.join(words)\n",
+    "\n",
+    "df['cleaned_text'] = df['text'].apply(preprocess_text)\n",
+    "\n",
+    "# Using Word2Vec for word embedding\n",
+    "sentences = [text.split() for text in df['cleaned_text']]\n",
+    "word2vec_model = Word2Vec(sentences, vector_size=100, window=5, min_count=1, workers=4)\n",
+    "\n",
+    "# Aggregate word embeddings for each email (average of word embeddings)\n",
+    "def get_sentence_embedding(sentence, model):\n",
+    "    words = sentence.split()\n",
+    "    word_vectors = [model.wv[word] for word in words if word in model.wv]\n",
+    "    if word_vectors:\n",
+    "        return np.mean(word_vectors, axis=0)\n",
+    "    else:\n",
+    "        return np.zeros(model.vector_size)\n",
+    "\n",
+    "df['embedding'] = df['cleaned_text'].apply(lambda x: get_sentence_embedding(x, word2vec_model))\n",
+    "\n",
+    "\n"
    ]
   }
  ],
