--- a/Project.ipynb
+++ b/Project.ipynb
@@ -76,6 +76,32 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM for unencrypted dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using train dataset for now\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Training\n",
+    "svm_model = SVC(kernel='linear', random_state=42)\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
+    "y_pred = svm_model.predict(X_test)\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred)}\")\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
