LR for unencrypted data

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -8,7 +8,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "AgkWIKXTWZ2t",
-    "outputId": "0a0fe365-3ce6-4e7d-9f28-dc2d657cf9a6"
+    "outputId": "0a0fe365-3ce6-4e7d-9f28-dc2d657cf9a6",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -100,6 +101,35 @@
     "\n",
     "y_pred = svm_model.predict(X_test)\n",
     "print(f\"Accuracy: {accuracy_score(y_test, y_pred)}\")\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LR for unencrypted data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train Logistic Regression Model\n",
+    "log_reg_model = LogisticRegression(random_state=42, max_iter=1000)\n",
+    "log_reg_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = log_reg_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy * 100:.2f}%\")\n",
+    "\n",
+    "# Detailed classification report\n",
+    "print(\"\\nClassification Report:\")\n",
     "print(classification_report(y_test, y_pred))"
    ]
   }
