--- a/Project.ipynb
+++ b/Project.ipynb
@@ -132,6 +132,86 @@
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Paillier Encryption"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##\n",
+    "!pip install phe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import numpy as np\n",
+    "from gensim.models import Word2Vec\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from phe import paillier\n",
+    "\n",
+    "# Load JSON dataset\n",
+    "with open('test.jsonl', 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Preprocess text data (tokenize, remove stop words, stem/lemmatize)\n",
+    "# ... (implement preprocessing steps as needed)\n",
+    "\n",
+    "# Create word embeddings\n",
+    "sentences = [text.split() for text in data]\n",
+    "model = Word2Vec(sentences, min_count=1, vector_size=100)  # Adjust vector size as needed\n",
+    "\n",
+    "# Generate Paillier key pair\n",
+    "public_key, private_key = paillier.generate_keys(1024)  # Adjust key size as needed\n",
+    "\n",
+    "# Convert text to numerical vectors and encrypt\n",
+    "def text_to_vector_and_encrypt(text):\n",
+    "    words = text.split()\n",
+    "    vectors = [model[word] for word in words if word in model.wv]\n",
+    "    if vectors:\n",
+    "        vector = np.mean(vectors, axis=0)\n",
+    "        encrypted_vector = public_key.encrypt(vector)\n",
+    "        return encrypted_vector\n",
+    "    else:\n",
+    "        return None  # Handle empty vectors as needed\n",
+    "\n",
+    "encrypted_X = [text_to_vector_and_encrypt(text) for text in data]\n",
+    "\n",
+    "# Assuming your target variable is stored in 'y'\n",
+    "X_train, X_test, y_train, y_test = train_test_split(encrypted_X, y, test_size=0.2)\n",
+    "\n",
+    "# Train SVM model on encrypted data\n",
+    "svm_model = SVC()\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on encrypted test data\n",
+    "y_pred = svm_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate model performance\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
