--- a/Project.ipynb
+++ b/Project.ipynb
@@ -156,54 +156,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import json\n",
     "import numpy as np\n",
-    "from gensim.models import Word2Vec\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "import re\n",
+    "from gensim.models import Word2Vec\n",
     "from phe import paillier\n",
     "\n",
-    "# Load JSON dataset\n",
-    "with open('test.jsonl', 'r') as f:\n",
-    "    data = json.load(f)\n",
+    "# Load the dataset\n",
+    "def read_jsonl(file_path):\n",
+    "    data = []\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            data.append(json.loads(line))\n",
+    "    return pd.DataFrame(data)\n",
     "\n",
-    "# Preprocess text data (tokenize, remove stop words, stem/lemmatize)\n",
-    "# ... (implement preprocessing steps as needed)\n",
+    "file_path = 'test.jsonl'\n",
+    "df = read_jsonl(file_path)\n",
     "\n",
-    "# Create word embeddings\n",
-    "sentences = [text.split() for text in data]\n",
-    "model = Word2Vec(sentences, min_count=1, vector_size=100)  # Adjust vector size as needed\n",
+    "# Text preprocessing\n",
+    "nltk.download('stopwords')\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r'\\d+', '', text)\n",
+    "    text = re.sub(r'\\W+', ' ', text)\n",
+    "    words = text.split()\n",
+    "    words = [word for word in words if word not in stop_words]\n",
+    "    return ' '.join(words)\n",
+    "\n",
+    "df['cleaned_text'] = df['text'].apply(preprocess_text)\n",
+    "\n",
+    "# Using Word2Vec for word embedding\n",
+    "sentences = [text.split() for text in df['cleaned_text']]\n",
+    "word2vec_model = Word2Vec(sentences, vector_size=100, window=5, min_count=1, workers=4)\n",
+    "\n",
+    "# Aggregate word embeddings for each email (average of word embeddings)\n",
+    "def get_sentence_embedding(sentence, model):\n",
+    "    words = sentence.split()\n",
+    "    word_vectors = [model.wv[word] for word in words if word in model.wv]\n",
+    "    if word_vectors:\n",
+    "        return np.mean(word_vectors, axis=0)\n",
+    "    else:\n",
+    "        return np.zeros(model.vector_size)\n",
+    "\n",
+    "df['embedding'] = df['cleaned_text'].apply(lambda x: get_sentence_embedding(x, word2vec_model))\n",
     "\n",
     "# Generate Paillier key pair\n",
-    "public_key, private_key = paillier.generate_keys(1024)  # Adjust key size as needed\n",
+    "public_key, private_key = paillier.generate_paillier_keypair()\n",
     "\n",
-    "# Convert text to numerical vectors and encrypt\n",
-    "def text_to_vector_and_encrypt(text):\n",
-    "    words = text.split()\n",
-    "    vectors = [model[word] for word in words if word in model.wv]\n",
-    "    if vectors:\n",
-    "        vector = np.mean(vectors, axis=0)\n",
-    "        encrypted_vector = public_key.encrypt(vector)\n",
-    "        return encrypted_vector\n",
-    "    else:\n",
-    "        return None  # Handle empty vectors as needed\n",
+    "# Encrypt embeddings\n",
+    "def encrypt_embedding(embedding):\n",
+    "    # Convert NumPy float to Python float before encrypting\n",
+    "    return [public_key.encrypt(float(value)) for value in embedding]\n",
     "\n",
-    "encrypted_X = [text_to_vector_and_encrypt(text) for text in data]\n",
+    "df['encrypted_embedding'] = df['embedding'].apply(encrypt_embedding)\n",
     "\n",
-    "# Assuming your target variable is stored in 'y'\n",
-    "X_train, X_test, y_train, y_test = train_test_split(encrypted_X, y, test_size=0.2)\n",
+    "# Extract encrypted embeddings and labels\n",
+    "X_encrypted = np.vstack(df['encrypted_embedding'].values)\n",
+    "y = df['label']\n",
     "\n",
-    "# Train SVM model on encrypted data\n",
-    "svm_model = SVC()\n",
-    "svm_model.fit(X_train, y_train)\n",
+    "# Train-test split\n",
+    "X_train_encrypted, X_test_encrypted, y_train, y_test = train_test_split(X_encrypted, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Predict on encrypted test data\n",
-    "y_pred = svm_model.predict(X_test)\n",
+    "# Training\n",
+    "svm_model = SVC(kernel='linear', random_state=42)\n",
+    "svm_model.fit(X_train_encrypted, y_train)\n",
     "\n",
-    "# Evaluate model performance\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(\"Accuracy:\", accuracy)"
+    "# Predictions on encrypted data\n",
+    "y_pred = svm_model.predict(X_test_encrypted)\n",
+    "\n",
+    "# Decrypt predictions\n",
+    "y_pred_decrypted = [private_key.decrypt(pred) for pred in y_pred]\n",
+    "\n",
+    "# Evaluation\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred_decrypted)}\")\n",
+    "print(classification_report(y_test, y_pred_decrypted))"
    ]
   },
   {
