--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3,6 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install git+https://github.com/data61/python-paillier.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
