Using Bag-of-words for text preprocessing instead of TD-IF vectorizer

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -165,90 +165,160 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import json\n",
+    "import time\n",
+    "import os.path\n",
+    "from contextlib import contextmanager\n",
+    "\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "import re\n",
-    "from gensim.models import Word2Vec\n",
-    "from phe import paillier\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "# Load the dataset\n",
-    "def read_jsonl(file_path):\n",
-    "    data = []\n",
-    "    with open(file_path, 'r') as file:\n",
-    "        for line in file:\n",
-    "            data.append(json.loads(line))\n",
-    "    return pd.DataFrame(data)\n",
+    "import phe as paillier\n",
     "\n",
-    "file_path = 'test.jsonl'\n",
-    "df = read_jsonl(file_path)\n",
+    "np.random.seed(42)\n",
     "\n",
-    "# Text preprocessing\n",
-    "nltk.download('stopwords')\n",
-    "stop_words = set(stopwords.words('english'))\n",
+    "def load_data_from_jsonl(file_path):\n",
+    "    \"\"\"Load data from a JSONL file.\"\"\"\n",
+    "    emails = []\n",
+    "    labels = []\n",
+    "    with open(file_path, 'r') as f:\n",
+    "        for line in f:\n",
+    "            entry = json.loads(line)\n",
+    "            emails.append(entry['text'])  # Adjust based on your JSON field\n",
+    "            labels.append(1 if entry['label_text'] == 'spam' else -1)  # Adjust label logic as necessary\n",
+    "    return np.array(emails), np.array(labels)\n",
     "\n",
-    "def preprocess_text(text):\n",
-    "    text = text.lower()\n",
-    "    text = re.sub(r'\\d+', '', text)\n",
-    "    text = re.sub(r'\\W+', ' ', text)\n",
-    "    words = text.split()\n",
-    "    words = [word for word in words if word not in stop_words]\n",
-    "    return ' '.join(words)\n",
+    "def preprocess_data(file_path):\n",
+    "    \"\"\"\n",
+    "    Get the Enron e-mails from disk.\n",
+    "    Represent them as bag-of-words.\n",
+    "    Shuffle and split train/test.\n",
+    "    \"\"\"\n",
     "\n",
-    "df['cleaned_text'] = df['text'].apply(preprocess_text)\n",
+    "    print(\"Importing dataset from disk...\")\n",
+    "    # Load emails from your JSONL file\n",
+    "    emails, labels = load_data_from_jsonl(file_path)\n",
     "\n",
-    "# Using Word2Vec for word embedding\n",
-    "sentences = [text.split() for text in df['cleaned_text']]\n",
-    "word2vec_model = Word2Vec(sentences, vector_size=100, window=5, min_count=1, workers=4)\n",
+    "    # Words count, keep only frequent words\n",
+    "    count_vect = CountVectorizer(decode_error='replace', stop_words='english',\n",
+    "                                  min_df=0.001)\n",
+    "    X = count_vect.fit_transform(emails)\n",
     "\n",
-    "# Aggregate word embeddings for each email (average of word embeddings)\n",
-    "def get_sentence_embedding(sentence, model):\n",
-    "    words = sentence.split()\n",
-    "    word_vectors = [model.wv[word] for word in words if word in model.wv]\n",
-    "    if word_vectors:\n",
-    "        return np.mean(word_vectors, axis=0)\n",
-    "    else:\n",
-    "        return np.zeros(model.vector_size)\n",
+    "    print('Vocabulary size: %d' % X.shape[1])\n",
     "\n",
-    "df['embedding'] = df['cleaned_text'].apply(lambda x: get_sentence_embedding(x, word2vec_model))\n",
+    "    # Shuffle\n",
+    "    perm = np.random.permutation(X.shape[0])\n",
+    "    X, y = X[perm, :], labels[perm]\n",
     "\n",
-    "# Generate Paillier key pair\n",
-    "public_key, private_key = paillier.generate_paillier_keypair()\n",
+    "    # Split train and test\n",
+    "    split = 500  # Number of samples to use for training\n",
+    "    X_train, X_test = X[-split:, :], X[:-split, :]\n",
+    "    y_train, y_test = y[-split:], y[:-split]\n",
     "\n",
-    "# Encrypt embeddings\n",
-    "def encrypt_embedding(embedding):\n",
-    "    # Convert NumPy float to Python float before encrypting\n",
-    "    return [public_key.encrypt(float(value)) for value in embedding]\n",
+    "    # Check unique labels in training set\n",
+    "    unique_labels = np.unique(y_train)\n",
+    "    print(\"Unique labels in training set:\", unique_labels)\n",
+    "    print(y_train)\n",
     "\n",
-    "df['encrypted_embedding'] = df['embedding'].apply(encrypt_embedding)\n",
+    "    # Ensure both classes are present\n",
+    "    if len(unique_labels) < 2:\n",
+    "        raise ValueError(\"Training set must contain both spam and ham examples.\")\n",
     "\n",
-    "# Extract encrypted embeddings and labels\n",
-    "X_encrypted = np.vstack(df['encrypted_embedding'].values)\n",
-    "y = df['label']\n",
+    "    print(\"Labels in trainset are {:.2f} spam : {:.2f} ham\".format(\n",
+    "        np.mean(y_train == 1), np.mean(y_train == -1)))\n",
     "\n",
-    "# Train-test split\n",
-    "X_train_encrypted, X_test_encrypted, y_train, y_test = train_test_split(X_encrypted, y, test_size=0.2, random_state=42)\n",
+    "    return X_train, y_train, X_test, y_test\n",
     "\n",
-    "# Training\n",
-    "svm_model = SVC(kernel='linear', random_state=42)\n",
-    "svm_model.fit(X_train_encrypted, y_train)\n",
     "\n",
-    "# Predictions on encrypted data\n",
-    "y_pred = svm_model.predict(X_test_encrypted)\n",
+    "@contextmanager\n",
+    "def timer():\n",
+    "    \"\"\"Helper for measuring runtime\"\"\"\n",
+    "    time0 = time.perf_counter()\n",
+    "    yield\n",
+    "    print('[elapsed time: %.2f s]' % (time.perf_counter() - time0))\n",
     "\n",
-    "# Decrypt predictions\n",
-    "y_pred_decrypted = [private_key.decrypt(pred) for pred in y_pred]\n",
     "\n",
-    "# Evaluation\n",
-    "print(f\"Accuracy: {accuracy_score(y_test, y_pred_decrypted)}\")\n",
-    "print(classification_report(y_test, y_pred_decrypted))"
+    "class Alice:\n",
+    "    \"\"\"Represents the model owner who trains the SVM model.\"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.model = SVC(kernel='linear')  # SVM with linear kernel\n",
+    "\n",
+    "    def generate_paillier_keypair(self, n_length):\n",
+    "        self.pubkey, self.privkey = paillier.generate_paillier_keypair(n_length=n_length)\n",
+    "\n",
+    "    def fit(self, X, y):\n",
+    "        self.model = self.model.fit(X, y)\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        return self.model.predict(X)\n",
+    "\n",
+    "    def encrypt_weights(self):\n",
+    "        # Convert sparse matrix to dense format (NumPy array)\n",
+    "        coef = self.model.coef_.toarray()[0, :]\n",
+    "        # Encrypt the coefficients\n",
+    "        encrypted_weights = [self.pubkey.encrypt(float(coef[i])) for i in range(coef.shape[0])]\n",
+    "        # Encrypt the intercept\n",
+    "        encrypted_intercept = self.pubkey.encrypt(float(self.model.intercept_[0]))\n",
+    "        return encrypted_weights, encrypted_intercept\n",
+    "\n",
+    "    def decrypt_scores(self, encrypted_scores):\n",
+    "        return [self.privkey.decrypt(s) for s in encrypted_scores]\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Bob:\n",
+    "    \"\"\"Scores local plaintext data using the encrypted model.\"\"\"\n",
+    "    def __init__(self, pubkey):\n",
+    "        self.pubkey = pubkey\n",
+    "\n",
+    "    def set_weights(self, weights, intercept):\n",
+    "        self.weights = weights\n",
+    "        self.intercept = intercept\n",
+    "\n",
+    "    def encrypted_score(self, x):\n",
+    "        score = self.intercept\n",
+    "        _, idx = x.nonzero()\n",
+    "        for i in idx:\n",
+    "            score += x[0, i] * self.weights[i]\n",
+    "        return score\n",
+    "\n",
+    "    def encrypted_evaluate(self, X):\n",
+    "        return [self.encrypted_score(X[i, :]) for i in range(X.shape[0])]\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    file_path = 'test.jsonl'  # Specify your JSONL file path here\n",
+    "    X, y, X_test, y_test = preprocess_data(file_path)\n",
+    "\n",
+    "    print(\"Alice: Generating paillier keypair\")\n",
+    "    alice = Alice()\n",
+    "    alice.generate_paillier_keypair(n_length=1024)\n",
+    "\n",
+    "    print(\"Alice: Learning spam classifier\")\n",
+    "    with timer() as t:\n",
+    "        alice.fit(X, y)\n",
+    "\n",
+    "    print(\"Classify with model in the clear -- what Alice would get having Bob's data locally\")\n",
+    "    with timer() as t:\n",
+    "        error = np.mean(alice.predict(X_test) != y_test)\n",
+    "    print(\"Error {:.3f}\".format(error))\n",
+    "\n",
+    "    print(\"Alice: Encrypting classifier\")\n",
+    "    with timer() as t:\n",
+    "        encrypted_weights, encrypted_intercept = alice.encrypt_weights()\n",
+    "\n",
+    "    print(\"Bob: Scoring with encrypted classifier\")\n",
+    "    bob = Bob(alice.pubkey)\n",
+    "    bob.set_weights(encrypted_weights, encrypted_intercept)\n",
+    "    with timer() as t:\n",
+    "        encrypted_scores = bob.encrypted_evaluate(X_test)\n",
+    "\n",
+    "    print(\"Alice: Decrypting Bob's scores\")\n",
+    "    with timer() as t:\n",
+    "        scores = alice.decrypt_scores(encrypted_scores)\n",
+    "    error = np.mean(np.sign(scores) != y_test)\n",
+    "    print(\"Error {:.3f} -- this is not known to Alice, who does not possess the ground truth labels\".format(error))\n"
    ]
   },
   {
