--- a/Project.ipynb
+++ b/Project.ipynb
@@ -31,60 +31,116 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import json\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "import time\n",
+    "from contextlib import contextmanager\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.linear_model import LogisticRegression, Perceptron\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "import re\n",
-    "from gensim.models import Word2Vec\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
-    "# Load the dataset\n",
-    "def read_jsonl(file_path):\n",
-    "    data = []\n",
-    "    with open(file_path, 'r') as file:\n",
-    "        for line in file:\n",
-    "            data.append(json.loads(line))\n",
-    "    return pd.DataFrame(data)\n",
     "\n",
-    "file_path = 'test.jsonl'\n",
-    "df = read_jsonl(file_path)\n",
+    "np.random.seed(99)\n",
     "\n",
-    "# Text preprocessing\n",
-    "nltk.download('stopwords')\n",
-    "stop_words = set(stopwords.words('english'))\n",
+    "def load_data_from_jsonl(file_path):\n",
+    "    #Reads JSONL file and extracts email texts and their corresponding labels.\n",
+    "    texts, labels = [], []\n",
+    "    with open(file_path, 'r') as f:\n",
+    "        for line in f:\n",
+    "            entry = json.loads(line)\n",
+    "            texts.append(entry['text'])  # Adapt based on the JSON schema\n",
+    "            labels.append(1 if entry['label_text'] == 'spam' else -1)  # Convert labels to numerical\n",
+    "    return np.array(texts), np.array(labels)\n",
     "\n",
-    "def preprocess_text(text):  # Convert to lowercase, Remove digits and special characters\n",
-    "    text = text.lower()\n",
-    "    text = re.sub(r'\\d+', '', text)\n",
-    "    text = re.sub(r'\\W+', ' ', text)\n",
-    "    words = text.split()\n",
-    "    words = [word for word in words if word not in stop_words]  # Remove stopwords\n",
-    "    return ' '.join(words)\n",
+    "def process_datasets(train_file, test_file):\n",
+    "    #Load, preprocess, and transform training and testing datasets.\n",
+    "    print(\"Reading training dataset.\")\n",
+    "    train_texts, train_labels = load_data_from_jsonl(train_file)\n",
     "\n",
-    "df['cleaned_text'] = df['text'].apply(preprocess_text)\n",
+    "    print(\"Reading testing dataset.\")\n",
+    "    test_texts, test_labels = load_data_from_jsonl(test_file)\n",
     "\n",
-    "# Using Word2Vec for word embedding\n",
-    "sentences = [text.split() for text in df['cleaned_text']]\n",
-    "word2vec_model = Word2Vec(sentences, vector_size=100, window=5, min_count=1, workers=4)\n",
+    "    # Text vectorization (Bag-of-Words with Tfidf, without IDF)\n",
+    "    vectorizer = TfidfVectorizer(use_idf=False, norm=None, stop_words='english', min_df=0.001)\n",
     "\n",
-    "# Aggregate word embeddings for each email (average of word embeddings)\n",
-    "def get_sentence_embedding(sentence, model):\n",
-    "    words = sentence.split()\n",
-    "    word_vectors = [model.wv[word] for word in words if word in model.wv]\n",
-    "    if word_vectors:\n",
-    "        return np.mean(word_vectors, axis=0)\n",
-    "    else:\n",
-    "        return np.zeros(model.vector_size)\n",
+    "    # Fit vectorizer on training data and apply to test data\n",
+    "    X_train = vectorizer.fit_transform(train_texts)\n",
+    "    X_test = vectorizer.transform(test_texts)\n",
     "\n",
-    "df['embedding'] = df['cleaned_text'].apply(lambda x: get_sentence_embedding(x, word2vec_model))\n",
+    "    print(f'Feature space size: {X_train.shape[1]}')\n",
     "\n",
-    "\n"
+    "    # Ensure both classes are present in training set\n",
+    "    if len(np.unique(train_labels)) < 2:\n",
+    "        raise ValueError(\"Training data must have both spam and non-spam labels.\")\n",
+    "\n",
+    "    print(f\"Proportion of spam: {np.mean(train_labels == 1):.2f}, ham: {np.mean(train_labels == -1):.2f}\")\n",
+    "\n",
+    "    return X_train, train_labels, X_test, test_labels\n",
+    "\n",
+    "@contextmanager\n",
+    "def measure_time():\n",
+    "    #Context manager to measure execution time.\n",
+    "    start = time.perf_counter()\n",
+    "    yield\n",
+    "    end = time.perf_counter()\n",
+    "    elapsed = end - start\n",
+    "    print(f'Elapsed time: {elapsed:.2f} seconds')\n",
+    "\n",
+    "class SystemAdmin:\n",
+    "    # Responsible for model training\n",
+    "    def __init__(self):\n",
+    "        self.svm_model = SVC(kernel='linear')\n",
+    "        self.lr_model = LogisticRegression()\n",
+    "        self.perceptron_model = Perceptron()\n",
+    "\n",
+    "    def train_models(self, X, y):\n",
+    "        #Train SVM, Logistic Regression, and Perceptron models.\n",
+    "        self.svm_model.fit(X, y)\n",
+    "        self.lr_model.fit(X, y)\n",
+    "        self.perceptron_model.fit(X, y)\n",
+    "\n",
+    "    def make_prediction(self, model, X):\n",
+    "        #Make predictions with the specified model.\n",
+    "        return model.predict(X)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    train_path = 'train.jsonl'\n",
+    "    test_path = 'test.jsonl'\n",
+    "\n",
+    "    X_train, y_train, X_test, y_test = process_datasets(train_path, test_path)\n",
+    "\n",
+    "    # Admin operations\n",
+    "    admin = SystemAdmin()\n",
+    "\n",
+    "    # Train models and record training time\n",
+    "    training_times = {}\n",
+    "    print(\"Training models.\")\n",
+    "    for model_name, model in zip([\"SVM\", \"Logistic Regression\", \"Perceptron\"],\n",
+    "                                 [admin.svm_model, admin.lr_model, admin.perceptron_model]):\n",
+    "        start_time = time.perf_counter()\n",
+    "        admin.train_models(X_train, y_train)\n",
+    "        training_times[model_name] = time.perf_counter() - start_time\n",
+    "\n",
+    "    # Evaluate models and store results\n",
+    "    results = []\n",
+    "    for model_name, model in zip([\"SVM\", \"Logistic Regression\", \"Perceptron\"],\n",
+    "                                 [admin.svm_model, admin.lr_model, admin.perceptron_model]):\n",
+    "        # Unencrypted evaluation\n",
+    "        start_time = time.perf_counter()\n",
+    "        preds = admin.make_prediction(model, X_test)\n",
+    "        test_time = time.perf_counter() - start_time\n",
+    "\n",
+    "        error_rate = np.mean(preds != y_test)\n",
+    "        f1 = f1_score(y_test, preds)\n",
+    "        results.append((model_name, \"Unencrypted\", error_rate, training_times[model_name], test_time, f1))\n",
+    "\n",
+    "    # Display results in a DataFrame\n",
+    "    df_results = pd.DataFrame(results, columns=[\"Model\", \"Type\", \"Test Error\", \"Training Time\", \"Test Time\", \"F1 Score\"])\n",
+    "    print(\"\\nResults Comparison:\")\n",
+    "    print(df_results)\n"
    ]
   },
   {
@@ -100,17 +156,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using train dataset for now\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# # Using train dataset for now\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Training\n",
-    "svm_model = SVC(kernel='linear', random_state=42)\n",
-    "svm_model.fit(X_train, y_train)\n",
+    "# # Training\n",
+    "# svm_model = SVC(kernel='linear', random_state=42)\n",
+    "# svm_model.fit(X_train, y_train)\n",
     "\n",
     "\n",
-    "y_pred = svm_model.predict(X_test)\n",
-    "print(f\"Accuracy: {accuracy_score(y_test, y_pred)}\")\n",
-    "print(classification_report(y_test, y_pred))"
+    "# y_pred = svm_model.predict(X_test)\n",
+    "# print(f\"Accuracy: {accuracy_score(y_test, y_pred)}\")\n",
+    "# print(classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -126,20 +182,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train Logistic Regression Model\n",
-    "log_reg_model = LogisticRegression(random_state=42, max_iter=1000)\n",
-    "log_reg_model.fit(X_train, y_train)\n",
+    "# # Train Logistic Regression Model\n",
+    "# log_reg_model = LogisticRegression(random_state=42, max_iter=1000)\n",
+    "# log_reg_model.fit(X_train, y_train)\n",
     "\n",
-    "# Make predictions on the test set\n",
-    "y_pred = log_reg_model.predict(X_test)\n",
+    "# # Make predictions on the test set\n",
+    "# y_pred = log_reg_model.predict(X_test)\n",
     "\n",
-    "# Evaluate the model\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f\"Accuracy: {accuracy * 100:.2f}%\")\n",
+    "# # Evaluate the model\n",
+    "# accuracy = accuracy_score(y_test, y_pred)\n",
+    "# print(f\"Accuracy: {accuracy * 100:.2f}%\")\n",
     "\n",
-    "# Detailed classification report\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, y_pred))"
+    "# # Detailed classification report\n",
+    "# print(\"\\nClassification Report:\")\n",
+    "# print(classification_report(y_test, y_pred))"
    ]
   },
   {
