Adding PCA for dimensionality reduction

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Paillier Encryption"
+    "## Paillier Encryption with PCA"
    ]
   },
   {
@@ -211,167 +211,176 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import json\n",
     "import time\n",
-    "import os.path\n",
     "from contextlib import contextmanager\n",
-    "\n",
-    "import numpy as np\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression, Perceptron\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
-    "import phe as paillier\n",
-    "\n",
-    "np.random.seed(42)\n",
+    "np.random.seed(99)\n",
     "\n",
     "def load_data_from_jsonl(file_path):\n",
-    "    \"\"\"Load data from a JSONL file.\"\"\"\n",
-    "    emails = []\n",
-    "    labels = []\n",
+    "    # Reads JSONL file and extracts email texts and their corresponding labels.\n",
+    "    texts, labels = [], []\n",
     "    with open(file_path, 'r') as f:\n",
     "        for line in f:\n",
     "            entry = json.loads(line)\n",
-    "            emails.append(entry['text'])  # Adjust based on your JSON field\n",
-    "            labels.append(1 if entry['label_text'] == 'spam' else -1)  # Adjust label logic as necessary\n",
-    "    return np.array(emails), np.array(labels)\n",
+    "            texts.append(entry['text'])  # Adapt based on the JSON schema\n",
+    "            labels.append(1 if entry['label_text'] == 'spam' else -1)  # Convert labels to numerical\n",
+    "    return np.array(texts), np.array(labels)\n",
     "\n",
-    "def preprocess_data(file_path):\n",
-    "    \"\"\"\n",
-    "    Get the Enron e-mails from disk.\n",
-    "    Represent them as bag-of-words.\n",
-    "    Shuffle and split train/test.\n",
-    "    \"\"\"\n",
+    "def process_datasets(train_file, test_file, n_components=100):\n",
+    "    # Load, preprocess, and transform training and testing datasets, with PCA for dimensionality reduction.\n",
+    "    print(\"Reading training dataset.\")\n",
+    "    train_texts, train_labels = load_data_from_jsonl(train_file)\n",
     "\n",
-    "    print(\"Importing dataset from disk...\")\n",
-    "    # Load emails from your JSONL file\n",
-    "    emails, labels = load_data_from_jsonl(file_path)\n",
+    "    print(\"Reading testing dataset.\")\n",
+    "    test_texts, test_labels = load_data_from_jsonl(test_file)\n",
     "\n",
-    "    # Words count, keep only frequent words\n",
-    "    count_vect = CountVectorizer(decode_error='replace', stop_words='english',\n",
-    "                                  min_df=0.001)\n",
-    "    X = count_vect.fit_transform(emails)\n",
+    "    # Text vectorization (Bag-of-Words with Tfidf, without IDF)\n",
+    "    vectorizer = TfidfVectorizer(use_idf=False, norm=None, stop_words='english', min_df=0.001)\n",
     "\n",
-    "    print('Vocabulary size: %d' % X.shape[1])\n",
+    "    # Fit vectorizer on training data and apply to test data\n",
+    "    X_train = vectorizer.fit_transform(train_texts).toarray()  # Convert to dense array for PCA\n",
+    "    X_test = vectorizer.transform(test_texts).toarray()\n",
     "\n",
-    "    # Shuffle\n",
-    "    perm = np.random.permutation(X.shape[0])\n",
-    "    X, y = X[perm, :], labels[perm]\n",
+    "    print(f'Original feature space size: {X_train.shape[1]}')\n",
     "\n",
-    "    # Split train and test\n",
-    "    split = 500  # Number of samples to use for training\n",
-    "    X_train, X_test = X[-split:, :], X[:-split, :]\n",
-    "    y_train, y_test = y[-split:], y[:-split]\n",
+    "    # Scale the data before applying PCA\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "    # Check unique labels in training set\n",
-    "    unique_labels = np.unique(y_train)\n",
-    "    print(\"Unique labels in training set:\", unique_labels)\n",
-    "    print(y_train)\n",
+    "    # Apply PCA for dimensionality reduction\n",
+    "    pca = PCA(n_components=n_components)\n",
+    "    X_train_reduced = pca.fit_transform(X_train_scaled)\n",
+    "    X_test_reduced = pca.transform(X_test_scaled)\n",
     "\n",
-    "    # Ensure both classes are present\n",
-    "    if len(unique_labels) < 2:\n",
-    "        raise ValueError(\"Training set must contain both spam and ham examples.\")\n",
+    "    print(f'Reduced feature space size: {X_train_reduced.shape[1]}')\n",
     "\n",
-    "    print(\"Labels in trainset are {:.2f} spam : {:.2f} ham\".format(\n",
-    "        np.mean(y_train == 1), np.mean(y_train == -1)))\n",
+    "    # Ensure both classes are present in training set\n",
+    "    if len(np.unique(train_labels)) < 2:\n",
+    "        raise ValueError(\"Training data must have both spam and non-spam labels.\")\n",
     "\n",
-    "    return X_train, y_train, X_test, y_test\n",
+    "    print(f\"Proportion of spam: {np.mean(train_labels == 1):.2f}, ham: {np.mean(train_labels == -1):.2f}\")\n",
     "\n",
+    "    return X_train_reduced, train_labels, X_test_reduced, test_labels\n",
     "\n",
     "@contextmanager\n",
-    "def timer():\n",
-    "    \"\"\"Helper for measuring runtime\"\"\"\n",
-    "    time0 = time.perf_counter()\n",
+    "def measure_time():\n",
+    "    # Context manager to measure execution time.\n",
+    "    start = time.perf_counter()\n",
     "    yield\n",
-    "    print('[elapsed time: %.2f s]' % (time.perf_counter() - time0))\n",
+    "    end = time.perf_counter()\n",
+    "    elapsed = end - start\n",
+    "    print(f'Elapsed time: {elapsed:.2f} seconds')\n",
     "\n",
-    "\n",
-    "class Alice:\n",
-    "    \"\"\"Represents the model owner who trains the SVM model.\"\"\"\n",
+    "class SystemAdmin:\n",
+    "    # Responsible for model training, encryption, and key generation.\n",
     "    def __init__(self):\n",
-    "        self.model = SVC(kernel='linear')  # SVM with linear kernel\n",
+    "        self.svm_model = SVC(kernel='linear')\n",
+    "        self.lr_model = LogisticRegression(max_iter=2000)  # Increased max_iter to 2000 for better convergence\n",
+    "        self.perceptron_model = Perceptron()\n",
     "\n",
-    "    def generate_paillier_keypair(self, n_length):\n",
-    "        self.pubkey, self.privkey = paillier.generate_paillier_keypair(n_length=n_length)\n",
+    "    def generate_paillier_keys(self, key_length):\n",
+    "        self.pub_key, self.priv_key = paillier.generate_paillier_keypair(n_length=key_length)\n",
     "\n",
-    "    def fit(self, X, y):\n",
-    "        self.model = self.model.fit(X, y)\n",
+    "    def train_models(self, X, y):\n",
+    "        # Train SVM, Logistic Regression, and Perceptron models.\n",
+    "        self.svm_model.fit(X, y)\n",
+    "        self.lr_model.fit(X, y)\n",
+    "        self.perceptron_model.fit(X, y)\n",
     "\n",
-    "    def predict(self, X):\n",
-    "        return self.model.predict(X)\n",
+    "    def make_prediction(self, model, X):\n",
+    "        # Make predictions with the specified model.\n",
+    "        return model.predict(X)\n",
     "\n",
-    "    def encrypt_weights(self):\n",
-    "        # Convert sparse matrix to dense format (NumPy array)\n",
-    "        coef = self.model.coef_.toarray()[0, :]\n",
-    "        # Encrypt the coefficients\n",
-    "        encrypted_weights = [self.pubkey.encrypt(float(coef[i])) for i in range(coef.shape[0])]\n",
-    "        # Encrypt the intercept\n",
-    "        encrypted_intercept = self.pubkey.encrypt(float(self.model.intercept_[0]))\n",
+    "    def encrypt_model_params(self, model):\n",
+    "        # Encrypt model parameters.\n",
+    "        coefficients = model.coef_.toarray()[0, :] if hasattr(model.coef_, \"toarray\") else model.coef_[0, :]\n",
+    "        encrypted_weights = [self.pub_key.encrypt(float(w)) for w in coefficients]\n",
+    "        encrypted_intercept = self.pub_key.encrypt(float(model.intercept_[0]))\n",
     "        return encrypted_weights, encrypted_intercept\n",
     "\n",
-    "    def decrypt_scores(self, encrypted_scores):\n",
-    "        return [self.privkey.decrypt(s) for s in encrypted_scores]\n",
+    "    def decrypt_values(self, encrypted_values):\n",
+    "        # Decrypt encrypted values.\n",
+    "        return [self.priv_key.decrypt(val) for val in encrypted_values]\n",
     "\n",
+    "class ModelUser:\n",
+    "    # User who evaluates data using encrypted models.\n",
+    "    def __init__(self, pub_key):\n",
+    "        self.pub_key = pub_key\n",
     "\n",
+    "    def initialize_model(self, enc_weights, enc_intercept):\n",
+    "        self.weights = enc_weights\n",
+    "        self.intercept = enc_intercept\n",
     "\n",
-    "class Bob:\n",
-    "    \"\"\"Scores local plaintext data using the encrypted model.\"\"\"\n",
-    "    def __init__(self, pubkey):\n",
-    "        self.pubkey = pubkey\n",
-    "\n",
-    "    def set_weights(self, weights, intercept):\n",
-    "        self.weights = weights\n",
-    "        self.intercept = intercept\n",
-    "\n",
-    "    def encrypted_score(self, x):\n",
+    "    def calculate_encrypted_score(self, feature_vec):\n",
     "        score = self.intercept\n",
-    "        _, idx = x.nonzero()\n",
-    "        for i in idx:\n",
-    "            score += x[0, i] * self.weights[i]\n",
+    "        # Loop through all features since it's now a dense vector\n",
+    "        for idx in range(len(self.weights)):\n",
+    "            score += feature_vec[idx] * self.weights[idx]\n",
     "        return score\n",
     "\n",
-    "    def encrypted_evaluate(self, X):\n",
-    "        return [self.encrypted_score(X[i, :]) for i in range(X.shape[0])]\n",
-    "\n",
+    "    def evaluate_model(self, X):\n",
+    "        # Score test data using the encrypted model.\n",
+    "        return [self.calculate_encrypted_score(X[i, :]) for i in range(X.shape[0])]\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    file_path = 'test.jsonl'  # Specify your JSONL file path here\n",
-    "    X, y, X_test, y_test = preprocess_data(file_path)\n",
+    "    train_path = 'train.jsonl'\n",
+    "    test_path = 'test.jsonl'\n",
     "\n",
-    "    print(\"Alice: Generating paillier keypair\")\n",
-    "    alice = Alice()\n",
-    "    alice.generate_paillier_keypair(n_length=1024)\n",
+    "    # Process datasets and apply PCA for dimensionality reduction\n",
+    "    X_train, y_train, X_test, y_test = process_datasets(train_path, test_path, n_components=100)\n",
     "\n",
-    "    print(\"Alice: Learning spam classifier\")\n",
-    "    with timer() as t:\n",
-    "        alice.fit(X, y)\n",
+    "    # Admin operations\n",
+    "    admin = SystemAdmin()\n",
+    "    admin.generate_paillier_keys(key_length=1024)\n",
     "\n",
-    "    print(\"Classify with model in the clear -- what Alice would get having Bob's data locally\")\n",
-    "    with timer() as t:\n",
-    "        error = np.mean(alice.predict(X_test) != y_test)\n",
-    "    print(\"Error {:.3f}\".format(error))\n",
+    "    # Train models and record training time\n",
+    "    training_times = {}\n",
+    "    print(\"Training models.\")\n",
+    "    for model_name, model in zip([\"SVM\", \"Logistic Regression\", \"Perceptron\"],\n",
+    "                                 [admin.svm_model, admin.lr_model, admin.perceptron_model]):\n",
+    "        start_time = time.perf_counter()\n",
+    "        admin.train_models(X_train, y_train)\n",
+    "        training_times[model_name] = time.perf_counter() - start_time\n",
     "\n",
-    "    print(\"Alice: Encrypting classifier\")\n",
-    "    with timer() as t:\n",
-    "        encrypted_weights, encrypted_intercept = alice.encrypt_weights()\n",
+    "    # Evaluate models (encrypted) and store results\n",
+    "    results = []\n",
+    "    for model_name, model in zip([\"SVM\", \"Logistic Regression\", \"Perceptron\"],\n",
+    "                                 [admin.svm_model, admin.lr_model, admin.perceptron_model]):\n",
+    "        # Encrypt model parameters\n",
+    "        enc_weights, enc_intercept = admin.encrypt_model_params(model)\n",
     "\n",
-    "    print(\"Bob: Scoring with encrypted classifier\")\n",
-    "    bob = Bob(alice.pubkey)\n",
-    "    bob.set_weights(encrypted_weights, encrypted_intercept)\n",
-    "    with timer() as t:\n",
-    "        encrypted_scores = bob.encrypted_evaluate(X_test)\n",
+    "        # User-side encrypted evaluation\n",
+    "        user = ModelUser(admin.pub_key)\n",
+    "        user.initialize_model(enc_weights, enc_intercept)\n",
     "\n",
-    "    print(\"Alice: Decrypting Bob's scores\")\n",
-    "    with timer() as t:\n",
-    "        scores = alice.decrypt_scores(encrypted_scores)\n",
-    "    error = np.mean(np.sign(scores) != y_test)\n",
-    "    print(\"Error {:.3f} -- this is not known to Alice, who does not possess the ground truth labels\".format(error))\n"
+    "        start_time = time.perf_counter()\n",
+    "        enc_scores = user.evaluate_model(X_test)\n",
+    "        encrypted_test_time = time.perf_counter() - start_time\n",
+    "\n",
+    "        decrypted_scores = admin.decrypt_values(enc_scores)\n",
+    "        enc_error_rate = np.mean(np.sign(decrypted_scores) != y_test)\n",
+    "        enc_f1 = f1_score(y_test, np.sign(decrypted_scores))\n",
+    "        results.append((model_name, \"Encrypted\", enc_error_rate, training_times[model_name], encrypted_test_time, enc_f1))\n",
+    "\n",
+    "    # Display results in a DataFrame\n",
+    "    df_results = pd.DataFrame(results, columns=[\"Model\", \"Type\", \"Test Error\", \"Training Time\", \"Test Time\", \"F1 Score\"])\n",
+    "    print(\"\\nResults Comparison:\")\n",
+    "    print(df_results)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
